[package]
name = "raqote-usvg-render"
version = "0.11.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>", "Yarn <yarnnd@gmail.com>"]
keywords = ["svg", "render", "raster"]
license = "MPL-2.0"
edition = "2018"
description = "raqote backend for resvg."
repository = "https://github.com/RazrFalcon/resvg"

[badges]
travis-ci = { repository = "RazrFalcon/resvg" }

[dependencies]
jpeg-decoder = { version = "0.1", default-features = false }
log = "0.4"
pico-args = "0.3"
png = { version = "0.15", default-features = false } # the same version as used by raqote
raqote = { version = "0.8", default-features = false }
rgb = "0.8"
svgfilters = "0.1"
usvg = { version = "0.11", git = "https://github.com/RazrFalcon/resvg.git", rev = "fbd2dfb838730a5b64f94ed25116b3aad41d9786", default-features = false }

[features]
default = ["text"]
text = ["usvg/text"] # enables SVG Text support
